# noemafeed-mobile

./: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE.txt  README.md  SECURITY.md  rust-toolchain.txt
docs/: ARCHITECTURE.md  COLLECTIVE_MEMORY.md  CONTEXTUAL_INDEX.md  KB_SPEC.md  ONTOLOGICAL_PERSONALIZATION.md
kb/dynamics/: ontogenesis.ttl
kb/fus/: core.ttl  structural.ttl
kb/subjects/: astro-profiles.ttl
scripts/: build-wasm.sh
src/: engine.rs  lib.rs
src/core/: fus.rs  inference.rs  operators.rs
src/kb/dynamics/: context-index.ttl  perturbations.ttl
src/kb/fus/: archetypal.ttl  existential.ttl  identity.ttl
src/kb/subjects/: subject-registry.ttl
web/: app.js  index.html  manifest.json  service-worker.js  styles.css
