[package]
name = "noemafeed-mobile"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Ontological news feed for sustainable cognition — offline, ethical, open-source"
repository = "https://github.com/max456im/noemafeed-mobile"
authors = ["Maksim Zapevalov <max456im@protonmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
serde-wasm-bindgen = "0.6"
oxigraph = { version = "0.5.4", features = ["js"] }
thiserror = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"    # оптимизация по размеру
lto = true
strip = true